<resources>
    <string name="app_name">My Profile Fix</string>
    <string name="my_profile">MY\nPROFILE</string>
    <string name="aloha">Aloha!</string>
    <string name="intro"><![CDATA[I\'m Rifdah, a college student at IDN,\nlifelong learner & typography enthusiast.]]></string>
    <string name="intro_space">I  N T  R  O  D  U  C  T I  O  N</string>
    <string name="full_name">Full Name </string>
    <string name="rifdah_alifah">: Rifdah Alifah</string>
    <string name="nickname">Nickname</string>
    <string name="rifdah">: Rifdah</string>
    <string name="place">Place</string>
    <string name="jakarta">: Jakarta, 8 April 2002</string>
    <string name="age">Age</string>
    <string name="years_old">: 18 years old</string>
    <string name="height_weight">Height / Weight</string>
    <string name="cm_kg">: 160 cm / 55 kg</string>
    <string name="address">Address</string>
    <string name="multikarya">: St. Multi Karya no.11</string>
    <string name="hobby">Hobby</string>
    <string name="reading">: Reading</string>
    <string name="future_goals">Future goals</string>
    <string name="programmer">: Programmer, System Analyst,\nHafidzah</string>
    <string name="personal_ninformation">Personal\nInformation</string>
    <string name="motto">Motto</string>
    <string name="isi_motto">Holding the Dunya (world) in your hands\n and not your heart</string>
    <string name="about_me">A   B   O   U   T     M   E</string>
    <string name="tv_educational">Educational</string>
    <string name="text_background">Background</string>
    <string name="_2006_2012">2006-2012 :</string>
    <string name="text_sd">At-taqwa Islamic Elemenentary School</string>
    <string name="text_2013 :">2013-2016</string>
    <string name="text_2013">2013-2016 :</string>
    <string name="text_smp">Persatuan Islam 69 Boarding School</string>
    <string name="text_2017">2017-2020 :</string>
    <string name="text_sma">Persatuan Islam 69 Boarding School</string>
    <string name="get_in_touch">Get in Touch</string>
    <string name="text_instagram">Instagram</string>
    <string name="uname_ig">/@rifdahalf_</string>
    <string name="text_dribbble">dribbble</string>
    <string name="uname_rifdahalf">/@rifdahalf</string>
    <string name="text_medium">Medium</string>
    <string name="text_github">GitHub</string>
    <string name="text_rifdahalifah">/RifdahAlifah</string>
    <string name="text_email">Email</string>
    <string name="email_rifdah">rifdahalifah37@gmail.com</string>
    <string name="e_d_u_c_a_t_i_o_n_a_l">E D U C A T I O N A L</string>
    <string name="image">image</string>
    <string name="image1">image1</string>
    <string name="get_started">Get Started</string>
</resources>